<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AboutActivity"
    tools:showIn="@layout/app_bar_about">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:gravity="center"
        android:src="@drawable/logokmhdi"/>
    <me.biubiubiu.justifytext.library.JustifyTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="13dp"
        android:text="@string/kmhdi1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="PERJALANAN ORGANISASI KMHDI"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tahap Pemunculan Ide"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="14dp"/>
    <me.biubiubiu.justifytext.library.JustifyTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="13dp"
        android:text="@string/kmhdi2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tahap Pemantapan Ide"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="14dp"/>
    <me.biubiubiu.justifytext.library.JustifyTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="13dp"
        android:text="@string/kmhdi3"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:src="@drawable/kongres1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pelaksanaan Kongres atau Mahasabha I KMHDI \n \n"
        android:gravity="center"
        android:textSize="14dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tahap Penyamaan Visi"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="14dp"/>
    <me.biubiubiu.justifytext.library.JustifyTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="13dp"
        android:text="@string/kmhdi4"/>
    <me.biubiubiu.justifytext.library.JustifyTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="13dp"
        android:text="@string/kmhdi5"/>
    <me.biubiubiu.justifytext.library.JustifyTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="13dp"
        android:text="@string/kmhdi6"/>
    <me.biubiubiu.justifytext.library.JustifyTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:text="@string/kmhdi7"/>
    <me.biubiubiu.justifytext.library.JustifyTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="13dp"
        android:text="@string/kmhdi8"/>
    <me.biubiubiu.justifytext.library.JustifyTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:text="@string/kmhdi9"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:src="@drawable/kongres2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Jalannya Kongres atau Mahasabha I KMHDI di UNHI Bali – 1993 \n \n"
        android:gravity="center"
        android:textSize="14dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pelaksanaan Kongres Nasional"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="14dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Mahasiswa Hindu Indonesia"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="14dp"/>
    <me.biubiubiu.justifytext.library.JustifyTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:text="@string/kmhdi10"/>
</LinearLayout>

</ScrollView>